fix get api key filter